--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 </head>
 <body>
   <div class=header>
-    <h1>Ｂｙｔｈｅｒｏａｄ</h1>
-    <div>せつめいせつめい</div>
+    <h1>Ｂｙｔｈｅｒｏａｄ(仮)</h1>
+    <div>名前はあくまで仮ですが…
+    　　　バンド一年目　五人で仲良く(？)やってます</div>
   </div>
   <div class=main>
     <div>
