--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <body>
   <div class=header>
     <h1>Ｂｙｔｈｅｒｏａｄ(仮)</h1>
-    <div>名前はあくまで仮ですが…
-    　　　バンド一年目　五人で仲良く(？)やってます</div>
+    <div>名前はあくまで仮ですが…　５人中４人がギター系弾いてます。</div>
   </div>
   <div class=main>
     <div>
