--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class=header>
-    <h1>(仮)</h1>
+    <h1>By the road(仮)</h1>
     <div>名前はあくまで仮ですが…　５人中４人がギター系弾いてます。</div>
   </div>
   <div class=main>
