--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <div class=header>
-    <h1>Ｂｙ　ｔｈｅ　ｒｏａｄ(仮)</h1>
-    <div>名前はあくまで仮ですが…　５人中４人がギター系弾いてます。</div>
+    <h1>私のホームページ</h1>
+    <div></div>
   </div>
   <div class=main>
     <div>
