--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
   <div class=header>
-    <h1>公大高専１年実習I-1レポート</h1>
-    <div>３組２４番</div>
+    <h1>私のホームページ</h1>
+    <div></div>
   </div>
   <div class=main>
     <div>
