--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを～～～自分の文章で続きを書く。<br>
+        スクラッチを使って模様を描くプログラムを作った。猫が座標平面状を上下に動いたり角度を変えたりするようにプログラムし、動いた軌道をペンで書き示すことによって模様が浮かび上がる仕組みになっている。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        一度ベースを作ったら、回転速度や回転数、ペンの太さなどの値を少し変えるだけで全く別の模様ができたので不思議だった。何回か作成してみたが、見当違いの形ができたり、案外何も考えず設定した値で綺麗な模様ができたりしたので、面白かった。<br>
       </div>
     </div>
 
