--- a/rep01.html
+++ b/rep01.html
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        上から物が落ちてくるので、それを猫がキャッチするように動かすゲームを作成した。動かす方法はキーボードの矢印ボタンで、スペースボタンを押すと、ジャンプすることができる。キャッチするとポイントが入る。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        以前にこのようなゲームを作ったことがあったので、比較的苦労せずに作ることができた。乱数で落ちてくる速さや場所を変えることができるという便利さが分かったので、もしゲームを作る機会があれば、有効活用してみようと思う。できたゲームは簡単すぎて、クソゲーに近いので改善してみようと思う。<br>        
       </div>
     </div>
 
@@ -54,9 +54,9 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://koto-nsok.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        自分のホームページを作成した。URLを検索することによってそのホームページを表示することができる。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ホームページを自分で作れることに驚いた。しかも作業自体はマニュアル通りに進めていくとすぐに作成することができ案外簡単だったことにも驚いた。<br>        
       </div>      
     </div>
     
