--- a/rep01.html
+++ b/rep01.html
@@ -56,7 +56,7 @@
         1.内容<br>
         自分のホームページを作成した。URLを検索することによってそのホームページを表示することができる。<br>
         2.感想<br>
-        ホームページを自分で作れることに驚いた。しかも作業自体はマニュアル通りに進めていくとすぐに作成することができ案外簡単だったことにも驚いた。<br>        
+        ホームページを自分で作れることに驚いた。しかも作業自体はマニュアル通りに進めていくとすぐに作成することができ案外簡単だったことにも驚いた。作ったホームページの内容をどうしようか迷ったけど結局デフォルトのままにしておいた。また編集してみようと思う。<br>        
       </div>      
     </div>
     
