--- a/rep02.html
+++ b/rep02.html
@@ -31,9 +31,9 @@
       <a href="https://koto-nsok.github.io/website/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        先週のホームページを作ったサイトを使用し、レポートを作った。これも先週のホームページ同様、URLを検索すると表示される。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        HTMLを使用することによって、サイト内にファイルを添付しておくことによって自動的にレポートに写真が添付されていて便利だなと思った。編集は初めて使ったサイトで慣れないことも多かったが、きちんと反映されてて安心した。<br>
       </div>
     </div>
 
@@ -41,10 +41,10 @@
       <h3>2-2 機械学習体験</h3>
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
-        1.内容<br>
-        ないようないよう<br>
+        1.カメラにグー、チョキ、パー映すとそれぞれ判別するという内容。<br>
+        <br>
         2.感想<br>
-        かんそうかんそう<br>        
+        パソコンの不具合等でなかなか先に進めることができなかったけど最終的に完成させることができたのでよかった。手をかざすだけできちんと判別できるのがすごいなと思った。<br>        
       </div>
     </div>
     
