--- a/vr.html
+++ b/vr.html
@@ -5,7 +5,7 @@
   <body>
     <a-scene>
       <a-sphere position="0 2.25 -5" radius="1" color="#EF2D5E"></a-sphere>
-      <a-sphere position="0 4 -5" radius=".75" color="#EF2D5E"></a-sphere>
+      <a-sphere position="0 4 -5" radius=".75" color="#00bfff"></a-sphere>
       <a-cylinder position="0.4 0.75 -5" radius="0.25" height="1.5" color="#FFC65D"></a-cylinder>
       <a-cylinder position="-0.4 0.75 -5" radius="0.25" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
