--- a/rep03.html
+++ b/rep03.html
@@ -28,7 +28,7 @@
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
       <img src="vr.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://https://koto-nsok.github.io/website/vr.html">vr空間</a><br>                                   
+      <a href="https://koto-nsok.github.io/website/vr.html">vr空間</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -67,7 +67,7 @@
   <div class=1week>
     <h2>第1週目のレポート</h2>
       <div>
-        <a href="https://koyo-nsok.github.io/website/rep01.html">1週目のレポート</a><br>
+        <a href="https://koto-nsok.github.io/website/rep01.html">1週目のレポート</a><br>
       </div>
   </div>
                                                              
