--- a/rep03.html
+++ b/rep03.html
@@ -28,7 +28,7 @@
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
       <img src="vr.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https//koto-nsok.github.io/website/vr.html">vr空間</a><br>                                   
+      <a href="https://koto-nsok.github.io/website/vr.html">vr空間</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -42,10 +42,10 @@
       <a href="https://koto-nsok.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+         伝言プログロムを作った。今回はブロックではなく、言語を使ってプログラムを組んだ。<br>
         2.感想<br>
-        かんそうかんそう<br>
-      </div>
+        　文字が細かくて、一文字でも間違えるとプログラムが作用しなかったので大変だった。しかし、ホームページを作った時と同様にこんな簡単に伝言板が作れることに驚いた。また、作ってみてHTMLなどにについて少し知ることができた。<br>
+    </div>
     </div>
 
     <div>
