--- a/rep02.html
+++ b/rep02.html
@@ -41,8 +41,8 @@
       <h3>2-2 機械学習体験</h3>
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
-        1.カメラにグー、チョキ、パー映すとそれぞれ判別するという内容。<br>
-        <br>
+        1.内容<br>
+        カメラにグー、チョキ、パー映すとそれぞれ判別するという内容。<br>
         2.感想<br>
         パソコンの不具合等でなかなか先に進めることができなかったけど最終的に完成させることができたのでよかった。手をかざすだけできちんと判別できるのがすごいなと思った。<br>        
       </div>
@@ -52,9 +52,9 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VR空間でほかの人ともつながり、会議をした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        3人でVRを回していたのでほとんど楽しめる時間がなかったのが残念だったけど、周りに何人か人がいたことや、黒板に字が書けるところが面白かった。<br>
       </div>
     </div>
     
