--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,9 @@
       <a href="https://koto-nsok.github.io/website/vr.html">vr空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        言語を使って立体を移動、拡大縮小、色の変更等をして、立体図形を作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        初めて文字でプログラムしたのでちゃんとできるか不安だったが、思っていたよりすぐに内容をつかむことができ、かわいい人型を作れたので満足。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://koto-nsok.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-         伝言プログロムを作った。今回はブロックではなく、言語を使ってプログラムを組んだ。<br>
+        伝言プログロムを作った。言語を使ってプログラムを組んだ。文字を打ってOKを押すと、その文字が画面上に表示されるようになっている。<br>
         2.感想<br>
-        　文字が細かくて、一文字でも間違えるとプログラムが作用しなかったので大変だった。しかし、ホームページを作った時と同様にこんな簡単に伝言板が作れることに驚いた。また、作ってみてHTMLなどにについて少し知ることができた。<br>
+        文字が細かくて、一文字でも間違えるとプログラムが作用しなかったので大変だった。しかし、ホームページを作った時と同様にこんな簡単に伝言板が作れることに驚いた。また、作ってみてHTMLなどにについて少し知ることができた。<br>
     </div>
     </div>
 
@@ -52,9 +52,9 @@
       <h3>3-2 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VR空間に入って立体の図形を移動させたり、白い球を出して跳ね返したりさせた。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        白い球をたくさん出して空間内を白い球で埋め尽くすのが面白かった。操作がまだまだなれていなかったけど、物体を持ち上げたり、移動したりはなんとかできたので、楽しめた。<br>
       </div>
     </div>
   
